--- a/a_few_ways_to_use_threads/work_crew/Makefile.var
+++ b/a_few_ways_to_use_threads/work_crew/Makefile.var
@@ -21,7 +21,7 @@ SHELL:= /bin/bash
 # General 
 # -------------------------------------- #
 # -------------------------------------- #
-name := backoff
+name := crew
 main := yes 
 
 #
